--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.17.10",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "firebase": "^11.2.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
@@ -21,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-swipeable": "^7.0.2",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
