--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/fiber": "^8.17.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.2.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
@@ -23,12 +26,16 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-swipeable": "^7.0.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/lodash": "^4.17.14",
+    "@types/node": "^24.0.10",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
