--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@aws-sdk/client-s3": "^3.842.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
@@ -23,6 +25,7 @@
     "@types/express": "^5.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
@@ -30,6 +33,7 @@
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-swipeable": "^7.0.2",
