--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
     "framer-motion": "^11.11.11",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "motion": "^11.15.0",
     "qrcode.react": "^4.1.0",
