--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-three/fiber": "^8.17.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jszip": "^3.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
