--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@react-three/fiber": "^8.17.10",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jszip": "^3.4.0",
@@ -34,15 +35,16 @@
     "lucide-react": "^0.454.0",
     "motion": "^11.15.0",
     "qrcode.react": "^4.1.0",
-    "react": "^18.3.1",
+    "react": "^19.1.1",
     "react-color": "^2.19.3",
     "react-day-picker": "^9.8.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.1",
     "react-router-dom": "^6.28.0",
     "react-swipeable": "^7.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
+    "three-stdlib": "^2.36.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
