--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
     "three-stdlib": "^2.36.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "vercel": "^44.6.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
